2009-12-12 Steffen  <>

	* initial code generated with kickstarter